# Catapult

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  available_backend.txt  healthcheck.py  requirements.txt  ruff.toml
docs/: DESIGN.md  DEVLOG.md  DOCKER_RELEASE_DESIGN.md  DOCKER_RELEASE_DESIGN_REVIEW.md  FINAL_SYSTEM_REVIEW.md  FIXES_APPLIED.md  MCP_DESIGN.md  POLISH_PLAN.md  VERSION_RELEASE_REFACTORING_PLAN.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
kb/: UI-debug.md  auth_401_fix.md  controller-executor-architecture.md  vllm-deployment-troubleshooting.md  wer_alignment.md
mcp/: README.md  pyproject.toml  test_integration.py
mcp/src/catapult_mcp/: __init__.py  client.py  config.py  server.py
mcp/src/catapult_mcp/prompts/: __init__.py  prompts.py
mcp/src/catapult_mcp/resources/: __init__.py  resources.py
mcp/src/catapult_mcp/tools/: __init__.py  deployments.py  docker_builds.py  models.py  search.py  system.py
mcp/src/model_registry_mcp/: __init__.py  server.py
mcp/src/model_registry_mcp/prompts/: __init__.py  prompts.py
mcp/src/model_registry_mcp/resources/: __init__.py  resources.py
mcp/src/model_registry_mcp/tools/: __init__.py  artifacts.py  benchmarks.py  release_configs.py  versions.py
scripts/: full_lifecycle_test.sh  health_check.sh  run_tests.sh
tests/: api_guardrail.sh  e2e_test.py  setup_archive_sync_test.py  test_deploy_script.sh  test_docker_builds.py  verify_dependencies_fallback.py  (+4 more)
(+226 files in other folders)
